--- a/src/App.css
+++ b/src/App.css
@@ -2,5 +2,10 @@
   max-width: 100%;
   margin: 0 auto;
   padding: 0rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+
   text-align: center;
 }
