--- a/src/index.css
+++ b/src/index.css
@@ -4,3 +4,16 @@ body{
   padding: 0rem;
   background-color: #2f2e2e;
 }
+
+.modal {
+  background-color: rgba(0, 0, 0, 0.5);
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  top: 0;
+  z-index: 4;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
