--- a/src/App.css
+++ b/src/App.css
@@ -39,3 +39,35 @@
   left: -0.3rem;
   top: -0.3rem;
 }
+
+.block-container{
+  position: absolute;
+  margin: 0;
+  padding: 0;
+  width: 100vw;
+}
+.text-block{
+  position: relative;
+  margin-top: 2rem;
+  margin-bottom: 35rem;
+  width: 30%;
+  height: 10rem;
+  left: 65%;
+  background-color: rgba(255, 255, 255, 0.75);
+}
+
+.figure-box img{
+  position: relative;
+  z-index: -1;
+  margin-top: 0;
+  left: 0;
+  top: 0rem;
+  position: fixed;
+  /* width: 100%; */
+  height: 100vh;
+  background-size: cover;
+  background-color: white;
+  background-repeat: no-repeat;
+  background-position: center;
+
+}
